# mcu32_temple

./: README.md
Markbase_GD32F303CBT6/: CMakeLists.txt  GD32F303RC.ld  debugconfig.cfg  gd32f30x_flash copy.ld  gd32f30x_flash.ld  gd32f30x_flash2.ld  gd32f3xx_flash.ld  link.ld  null.txt  笔记.txt
Markbase_GD32F303CBT6/GD32F30x_Firmware_Library_V220/CMSIS/GD/GD32F30x/Source/GCC/: GD32F303RGT6_GCC.s  startup_gd32f30x_hd.s  startup_gd32f30x_hd2.s
Markbase_GD32F303CBT6/app/: gd32f30x_it.c  main.c
Markbase_GD32F303CBT6/app/inc/: main.h
Markbase_GD32F303CBT6/原板资料/4_例程/实验0 工程模板/Drivers/SYSTEM/delay/: delay.c
Markbase_GD32F303CBT6/原板资料/4_例程/实验0 工程模板/Output/: GD32F303.axf  GD32F303.build_log.htm  GD32F303.hex  GD32F303.htm  GD32F303.lnp  GD32F303.map  GD32F303_Template.dep  delay.crf  delay.d  gd32f30x_adc.crf  gd32f30x_adc.d  gd32f30x_bkp.crf  gd32f30x_bkp.d  gd32f30x_can.crf  gd32f30x_can.d  gd32f30x_crc.crf  gd32f30x_crc.d  gd32f30x_ctc.crf  gd32f30x_ctc.d  gd32f30x_dac.crf  gd32f30x_dac.d  gd32f30x_dbg.crf  gd32f30x_dbg.d  gd32f30x_dma.crf  gd32f30x_dma.d  gd32f30x_enet.crf  gd32f30x_enet.d  gd32f30x_exmc.crf  gd32f30x_exmc.d  gd32f30x_exti.crf  gd32f30x_exti.d  gd32f30x_fmc.crf  gd32f30x_fmc.d  gd32f30x_fwdgt.crf  gd32f30x_fwdgt.d  gd32f30x_gpio.crf  gd32f30x_gpio.d  gd32f30x_i2c.crf  gd32f30x_i2c.d  gd32f30x_it.crf  (+29 more)
Markbase_GD32F303CBT6/原板资料/4_例程/实验0 工程模板/Projects/MDK-ARM/: GD32F303.uvguix.15612  GD32F303.uvoptx  GD32F303.uvprojx
Markbase_GD32F303CBT6/原板资料/4_例程/实验0 工程模板/User/: main.c
Markbase_GD32F303CBT6/原板资料/4_例程/实验10 内部温度传感器实验/Drivers/BSP/ADC/: adc.c  adc.h
Markbase_GD32F303CBT6/原板资料/4_例程/实验10 内部温度传感器实验/Projects/MDK-ARM/: GD32F303.uvprojx
Markbase_GD32F303CBT6/原板资料/4_例程/实验10 内部温度传感器实验/User/: main.c
Markbase_GD32F303CBT6/原板资料/4_例程/实验11 内部FLASH读写实验/Drivers/BSP/FMC/: fmc.c  fmc.h
Markbase_GD32F303CBT6/原板资料/4_例程/实验11 内部FLASH读写实验/Middlewares/USMART/: usmart_config.c
Markbase_GD32F303CBT6/原板资料/4_例程/实验11 内部FLASH读写实验/Projects/MDK-ARM/: GD32F303.uvprojx
Markbase_GD32F303CBT6/原板资料/4_例程/实验11 内部FLASH读写实验/User/: main.c
Markbase_GD32F303CBT6/原板资料/4_例程/实验12 USB虚拟串口实验/Drivers/BSP/KEY/: key.c  key.h
Markbase_GD32F303CBT6/原板资料/4_例程/实验12 USB虚拟串口实验/Drivers/BSP/LED/: led.h
Markbase_GD32F303CBT6/原板资料/4_例程/实验12 USB虚拟串口实验/Middlewares/FATFS/exfuns/: exfuns.c  exfuns.h  fattester.c  fattester.h
Markbase_GD32F303CBT6/原板资料/4_例程/实验12 USB虚拟串口实验/Middlewares/FATFS/src/: diskio.c  diskio.h
Markbase_GD32F303CBT6/原板资料/4_例程/实验12 USB虚拟串口实验/Middlewares/MALLOC/: malloc.c  malloc.h
Markbase_GD32F303CBT6/原板资料/4_例程/实验12 USB虚拟串口实验/Middlewares/USB/CONFIG/: hw_config.c  hw_config.h  usb_device.c  usb_device.h  usbd_cdc_if.c  usbd_conf.c  usbd_conf.h  usbd_desc.c  usbd_desc.h
Markbase_GD32F303CBT6/原板资料/4_例程/实验12 USB虚拟串口实验/Middlewares/USMART/: usmart.c  usmart_config.c  usmart_port.c  usmart_str.h
Markbase_GD32F303CBT6/原板资料/4_例程/实验12 USB虚拟串口实验/Projects/MDK-ARM/: GD32F303.uvprojx
Markbase_GD32F303CBT6/原板资料/4_例程/实验12 USB虚拟串口实验/User/: main.c
Markbase_GD32F303CBT6/原板资料/4_例程/实验1跑马灯/Projects/MDK-ARM/: GD32F303.uvguix.15612  GD32F303.uvoptx  GD32F303.uvprojx
Markbase_GD32F303CBT6/原板资料/4_例程/实验1跑马灯/User/: gd32f30x_it.c  main.c
Markbase_GD32F303CBT6/原板资料/4_例程/实验2 按键实验/Projects/MDK-ARM/: GD32F303.uvprojx
Markbase_GD32F303CBT6/原板资料/4_例程/实验2 按键实验/User/: main.c
Markbase_GD32F303CBT6/原板资料/4_例程/实验3 外部中断实验/Projects/MDK-ARM/: GD32F303.uvprojx
Markbase_GD32F303CBT6/原板资料/4_例程/实验3 外部中断实验/User/: main.c
Markbase_GD32F303CBT6/原板资料/4_例程/实验4 串口实验/Projects/MDK-ARM/: GD32F303.uvprojx
Markbase_GD32F303CBT6/原板资料/4_例程/实验4 串口实验/User/: main.c
Markbase_GD32F303CBT6/原板资料/4_例程/实验5 独立看门狗实验/Projects/MDK-ARM/: GD32F303.uvprojx
Markbase_GD32F303CBT6/原板资料/4_例程/实验5 独立看门狗实验/User/: main.c
Markbase_GD32F303CBT6/原板资料/4_例程/实验6 窗口看门狗实验/Projects/MDK-ARM/: GD32F303.uvprojx
Markbase_GD32F303CBT6/原板资料/4_例程/实验6 窗口看门狗实验/User/: main.c
Markbase_GD32F303CBT6/原板资料/4_例程/实验7 定时器中断实验/Projects/MDK-ARM/: GD32F303.uvprojx
Markbase_GD32F303CBT6/原板资料/4_例程/实验7 定时器中断实验/User/: main.c
Markbase_GD32F303CBT6/原板资料/4_例程/实验8 USMART调试实验/Middlewares/USMART/: usmart.h  usmart_config.c  usmart_str.c
Markbase_GD32F303CBT6/原板资料/4_例程/实验8 USMART调试实验/Projects/MDK-ARM/: GD32F303.uvprojx
Markbase_GD32F303CBT6/原板资料/4_例程/实验8 USMART调试实验/User/: main.c
Markbase_GD32F303CBT6/原板资料/4_例程/实验9 RTC实验/Middlewares/USMART/: usmart_config.c  usmart_port.h
Markbase_GD32F303CBT6/原板资料/4_例程/实验9 RTC实验/Projects/MDK-ARM/: GD32F303.uvprojx
Markbase_GD32F303CBT6/原板资料/4_例程/实验9 RTC实验/User/: main.c
firmware/: 笔记.txt  (+2 more)
firmware/test/: CMakeLists - 副本.txt  CMakeLists copy.txt  CMakeLists.txt  CMakeLists2.txt
(+28 files in other folders)
